# catbox

./: CHANGELOG.md  LICENSE  catbox.cabal
app/: Main.hs
app/Catbox/: Function.hs  Internal.hs
app/Catbox/Function/: Base.hs  Directory.hs  File.hs  Graph.hs  Pandoc.hs  Path.hs
app/Catbox/Internal/: Api.hs  Base.hs  Execute.hs  Function.hs  Monad.hs  Pandoc.hs  Types.hs
example/: example.toml  my_site.json  my_site.toml  ssg.json  ssg.toml  test.sh
example/input/: input.md  pangrams.md
godot/: catbox_node.gd  catbox_node.tscn  catbox_slot.gd  catbox_slot.tscn  catbox_slot_editor.gd  catbox_slot_editor.tscn  function_resource.gd  icon.svg.import  main.gd  main.tscn  project.godot
godot/catbox/: api.gd  function.gd  graph.gd  node.gd  parameter.gd  signature.gd  source.gd
