cabal-version: 3.4
name: catbox
version: 0.1.0.0

synopsis: document transformation application
homepage: exodrifter.space
license: MIT
license-file: LICENSE
author: exodrifter
maintainer: code@exodrifter.space
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable catbox
    default-language: Haskell2010
    import: warnings
    main-is: Main.hs
    other-modules:
      Catbox.Internal
      Catbox.Internal.Monad
      Catbox.Internal.Types

    default-extensions:
      DerivingStrategies,
      GeneralizedNewtypeDeriving,
      OverloadedStrings,

    build-depends:
      base >= 4.14 && < 4.17,
      relude ^>= 1.1.0.0,
      tomland ^>= 1.3.0.0,
      blaze-html,
      containers,
      directory,
      filepath,
      optparse-applicative,
      pandoc,
      transformers,

    mixins:
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude,

    hs-source-dirs: app
