cabal-version: 3.4
name: catbox
version: 0.1.0.0

synopsis: document transformation application
homepage: exodrifter.space
license: MIT
license-file: LICENSE
author: exodrifter
maintainer: code@exodrifter.space
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

executable catbox
    default-language: Haskell2010
    import: warnings
    main-is: Main.hs
    other-modules:
      Catbox.Function
      Catbox.Function.Base
      Catbox.Function.Directory
      Catbox.Function.File
      Catbox.Function.Graph
      Catbox.Function.Pandoc
      Catbox.Function.Path
      Catbox.Internal
      Catbox.Internal.Execute
      Catbox.Internal.Monad
      Catbox.Internal.Types

    ghc-options:
      -Wall
      -Wcompat
      -Werror

    default-extensions:
      BlockArguments,
      DerivingStrategies,
      GeneralizedNewtypeDeriving,
      NamedFieldPuns,
      OverloadedStrings,
      RecordWildCards,

    build-depends:
      base >=4.11 && <4.21,
      relude ^>= 1.2.1.0,
      aeson,
      blaze-html,
      containers,
      directory,
      filepath,
      mtl ^>= 2.3.1,
      optparse-applicative,
      pandoc,
      text,

    mixins:
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude,

    hs-source-dirs: app
